--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
     <title>@mileumclothing</title>
 </head>
 <body>
-    <header>
-        <div class="container">
+    <div class="container">
+        <header>
             <div id="header">
                 <img src="./img/logo.jpg" alt="logo" id="logo">
-                <p id="description">Somos a sua referência de estilo e qualidade de produtos!</p>
             </div>
-        </div>
-        
-    </header>
-    <main>
-        <div class="container">
-            <h1>White Cap</h1>
-            <img src="./img/cap1.jpg" alt="cap">
-        </div>
-    </main>
+        </header>
+        <main>
+            <div class="products">
+                <div class="container-products">
+                    <img src="./img/cap1.jpg" alt="cap" class="cap">
+                    <p class="desc">Bone coleção verão na cor branca</p>
+                    <p class="price">R$ 50,00</p>
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
