creating products by js

--- a/index.html
+++ b/index.html
@@ -8,23 +8,37 @@
     <title>@mileumclothing</title>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <div id="header">
-                <img src="./img/logo.jpg" alt="logo" id="logo">
-            </div>
-        </header>
-        <main>
-            <div class="products">
-                <div class="container-products">
-                    <img src="./img/cap1.jpg" alt="cap" class="cap">
-                    <p class="desc">Bone coleção verão na cor branca</p>
-                    <p class="price">R$ 50,00</p>
-                </div>
-            </div>
-        </main>
-    </div>
+    <header>
+        <div id="header" class="container">
+            <img src="./img/logo.jpg" alt="logo" id="logo">
+        </div>
+    </header>
+    <main>
+        <div class="products container">
+            <!--<div class="container-products">
+                <img src="./img/cap1.jpg" alt="cap" class="cap">
+                <p class="desc">Bone coleção verão na cor branca</p>
+                <p class="price">R$ 50,00</p>
+            </div>-->
+        </div>
+    </main>
+    <footer>
+        <div class="container bg">
+            <li class="footer">
+                <ul><a href="">Teste</a></ul>
+                <ul><a href="">Teste</a></ul>
+                <ul><a href="">Teste</a></ul>
+                <ul><a href="">Teste</a></ul>
+            </li>
+            <li class="footer">
+                <ul><a href="">Teste2</a></ul>
+                <ul><a href="">Teste2</a></ul>
+                <ul><a href="">Teste2</a></ul>
+                <ul><a href="">Teste2</a></ul>
+            </li>
+        </div>
+    </footer>
     
-    <script src="./script.js"></script>
+    <script src="./script2.js"></script>
 </body>
 </html>
