--- a/index.html
+++ b/index.html
@@ -9,33 +9,34 @@
 </head>
 <body>
     <header>
-        <div id="header" class="container">
+        <div id="header">
             <img src="./img/logo.jpg" alt="logo" id="logo">
         </div>
     </header>
     <main>
-        <div class="products container">
+        <div class="products">
             <!--<div class="container-products">
                 <img src="./img/cap1.jpg" alt="cap" class="cap">
                 <p class="desc">Bone coleção verão na cor branca</p>
                 <p class="price">R$ 50,00</p>
             </div>-->
         </div>
+            <div class="where">
+                <h2 class="where-title">Localização</h2>
+                <p class="where-desc">Camamu-Bahia</p>
+                <iframe class="where-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247821.08983093544!2d-39.246597283593786!3d-13.946424200000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x73ec353a383e20f%3A0xca0fcfb07417df75!2sLOJA%20MIL%20E%20UM!5e0!3m2!1spt-BR!2sbr!4v1637245290096!5m2!1spt-BR!2sbr" width="350" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
     </main>
     <footer>
-        <div class="container bg">
-            <li class="footer">
-                <ul><a href="">Teste</a></ul>
-                <ul><a href="">Teste</a></ul>
-                <ul><a href="">Teste</a></ul>
-                <ul><a href="">Teste</a></ul>
-            </li>
-            <li class="footer">
-                <ul><a href="">Teste2</a></ul>
-                <ul><a href="">Teste2</a></ul>
-                <ul><a href="">Teste2</a></ul>
-                <ul><a href="">Teste2</a></ul>
-            </li>
+        <div class="bg">
+            <div class="footer">
+                <h2 class="footer-title">Mapa do Site</h2>
+                <li class="footer-link">
+                    <ul><a href="https://www.youtube.com/">Quem somos</a></ul>
+                    <ul><a href="https://www.youtube.com/">Suporte</a></ul>
+                    <ul><a href="https://www.youtube.com/">Fale conosco</a></ul>
+                </li>
+            </div>
         </div>
     </footer>
     
