--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 </head>
 <body>
     <header>
+        <div class="frete-title">
+            <p>FRETE GRÁTIS ACIMA DE R$199,00 - TODO O BRASIL</p>
+        </div>
         <div id="header">
             <img src="./img/logo.jpg" alt="logo" id="logo">
         </div>
     </header>
     <main>
+        <div class="pict">
+        </div>
         <div class="products">
             <!--<div class="container-products">
                 <img src="./img/cap1.jpg" alt="cap" class="cap">
@@ -28,16 +33,26 @@
             </div>
     </main>
     <footer>
-        <div class="bg">
-            <div class="footer">
-                <h2 class="footer-title">Mapa do Site</h2>
-                <li class="footer-link">
-                    <ul><a href="https://www.youtube.com/">Quem somos</a></ul>
-                    <ul><a href="https://www.youtube.com/">Suporte</a></ul>
-                    <ul><a href="https://www.youtube.com/">Fale conosco</a></ul>
-                </li>
+            <div class="footer bg">
+                <div class="footer-help">
+                    <h2 class="footer-help-title">PRECISA DE AJUDA?</h2>
+                    <ul class="footer-help-link">
+                        <li><a href="https://www.youtube.com/">FALE CONOSCO</a></li>
+                        <li><a href="https://www.youtube.com/">POLITICA DE PRIVACIDADE</a></li>
+                        <li><a href="https://www.youtube.com/">POLITICA DE PAGAMENTO</a></li>
+                        <li><a href="https://www.youtube.com/">POLITICA DE ENTREGA</a></li>
+                        <li><a href="https://www.youtube.com/">POLITICA DE TROCA E DEVOLUÇÃO</a></li>
+                    </ul>
+                </div>
+                <div class="footer-about">
+                    <h2 class="footer-about-title">SOBRE A MIL E UM</h2>
+                    <ul class="footer-about-link">
+                        <li><a href="https://www.youtube.com/">NOSSA HISTÓRIA</a></li>
+                        <li><a href="https://www.youtube.com/">MODELOS FOTOGRÁFICOS</a></li>
+                        <li><a href="https://www.youtube.com/">MIL E UM NA SUA LOJA</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
     </footer>
     
     <script src="./script2.js"></script>
