--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,14 @@
         <div class="pict">
         </div>
         <div class="products">
-            <!--<div class="container-products">
-                <img src="./img/cap1.jpg" alt="cap" class="cap">
-                <p class="desc">Bone coleção verão na cor branca</p>
-                <p class="price">R$ 50,00</p>
-            </div>-->
+            <div class="carousel">
+               <!--  <div class="container-products">
+                    <img src="./img/capblack.jpg" alt="cap" class="cap">
+                    <p class="desc">Bone coleção verão na cor branca</p>
+                    <p class="old-price">R$ 50,00</p>
+                    <p class="price">R$ 50,00</p>
+                </div> -->
+            </div>
         </div>
             <div class="where">
                 <h2 class="where-title">Localização</h2>
