--- a/public/index.html
+++ b/public/index.html
@@ -21,19 +21,39 @@
         </div>
         <div class="products">
             <div class="carousel">
-               <!--  <div class="container-products">
+                <!-- <div class="container-products">
                     <img src="./img/capblack.jpg" alt="cap" class="cap">
                     <p class="desc">Bone coleção verão na cor branca</p>
                     <p class="old-price">R$ 50,00</p>
                     <p class="price">R$ 50,00</p>
                 </div> -->
             </div>
-        </div>
-            <div class="where">
-                <h2 class="where-title">Localização</h2>
-                <p class="where-desc">Camamu-Bahia</p>
-                <iframe class="where-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247821.08983093544!2d-39.246597283593786!3d-13.946424200000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x73ec353a383e20f%3A0xca0fcfb07417df75!2sLOJA%20MIL%20E%20UM!5e0!3m2!1spt-BR!2sbr!4v1637245290096!5m2!1spt-BR!2sbr" width="350" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <div class="button">
+                <button onclick="leftbtn()" class="btnleft"><</button>
+                <button onclick="rightbtn()" class="btnright">></button>
             </div>
+        </div>
+        <div class="history">
+            <div class="history-desc">
+                <h2>Kevin Assunção</h2>
+                <p>Texto sobre como foi a historia da criação da marca mil e um A pub
+                    licidade no rádio sempre demonstrou ser um meio eficaz e efic
+                    iente para ajudar a gerar reconhecimento de marca e expandir negó
+                    cios. Com a ascensão das rádios indoor isso ficou ainda mais efic
+                    iente, uma vez que as lojas passaram a ser donas das suas própri
+                    as “emissoras”, podendo proporcionar assim
+                    uma programação direcionada para o seu público-alvo.</p>
+            </div>
+            <div class="history-picture">
+                <img src="./img/patrao.jpg" alt="">
+            </div>
+            
+        </div>
+        <div class="where">
+            <h2 class="where-title">Localização</h2>
+            <p class="where-desc">Camamu-Bahia</p>
+            <iframe class="where-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247821.08983093544!2d-39.246597283593786!3d-13.946424200000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x73ec353a383e20f%3A0xca0fcfb07417df75!2sLOJA%20MIL%20E%20UM!5e0!3m2!1spt-BR!2sbr!4v1637245290096!5m2!1spt-BR!2sbr" width="350" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
     </main>
     <footer>
             <div class="footer bg">
