creating skeleton loading

--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,12 @@
         </div>
     </header>
     <main>
-        <div class="pict">
-        </div>
-        <div class="products">
+        <div class="pict skeleton"></div>
+        <div class="products skeleton">
             <div class="carousel">
-                <!-- <div class="container-products">
-                    <img src="./img/capblack.jpg" alt="cap" class="cap">
-                    <p class="desc">Bone coleção verão na cor branca</p>
+               <!--  <div class="container-products">
+                    <img src="./img/capblack.jpg" alt="cap" class="cap skeleton">
+                    <p class="desc skeleton">Bone coleção verão na cor branca</p>
                     <p class="old-price">R$ 50,00</p>
                     <p class="price">R$ 50,00</p>
                 </div> -->
@@ -79,5 +78,7 @@
     </footer>
     
     <script src="./script/script.js"></script>
+    <script>window.rwbp={email:'joaopiteer@hotmail.com',phone:'+5573991211529',message:'Tire qualquer duvida por aqui!',lang:'pt-BR'}</script>
+    <script defer async src='https://duz4dqsaqembt.cloudfront.net/client/whats.js'></script>
 </body>
 </html>
