fixing skeleton erros

--- a/public/index.html
+++ b/public/index.html
@@ -17,15 +17,15 @@
         </div>
     </header>
     <main>
-        <div class="pict skeleton"></div>
-        <div class="products skeleton">
+        <div class="pict"></div>
+        <div class="products">
             <div class="carousel">
-               <!--  <div class="container-products">
-                    <img src="./img/capblack.jpg" alt="cap" class="cap skeleton">
-                    <p class="desc skeleton">Bone coleção verão na cor branca</p>
-                    <p class="old-price">R$ 50,00</p>
-                    <p class="price">R$ 50,00</p>
-                </div> -->
+                <div class="container-products">
+                    <img class="cap skeleton">
+                    <p class="desc skeleton skeleton-text"></p>
+                    <p class="old-price skeleton skeleton-text"></p>
+                    <p class="price skeleton skeleton-text"></p>
+                </div>
             </div>
             <div class="button">
                 <button onclick="leftbtn()" class="btnleft"><</button>
