--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     </header>
     <main>
         <div class="pict"></div>
+        <div class="carrinho"></div>
+        <div class="carrinho-icon"></div>
         <div class="products">
             <div class="carousel">
                 <div class="container-products">
@@ -78,6 +80,7 @@
     </footer>
     
     <script src="./script/script.js"></script>
+    <script src="./script/controller.js"></script>
     <script>window.rwbp={email:'joaopiteer@hotmail.com',phone:'+5573991211529',message:'Tire qualquer duvida por aqui!',lang:'pt-BR'}</script>
     <script defer async src='https://duz4dqsaqembt.cloudfront.net/client/whats.js'></script>
 </body>
