fixing errors of cart

--- a/public/index.html
+++ b/public/index.html
@@ -18,29 +18,6 @@
     </header>
     <main>
         <div class="pict"></div>
-        <aside class="carrinho">
-            <h1 class="carrinho-title">Carrinho de Compras</h2>
-            <div class="carrinho-itens">
-                <img src="./img/cappurple.jpg" alt="" class="item-imagem">
-                <p class="item-nome">Item</p>
-                <p class="item-valor">R$ 20,30</p>
-                <input type="number" value="1" class="item-quantidade">
-                <button class="item-remover">Remover</button>
-            </div>
-            <div class="carrinho-itens">
-                <img src="./img/capwhite.jpg" alt="" class="item-imagem">
-                <p class="item-nome">Item</p>
-                <p class="item-valor">R$ 20,30</p>
-                <input type="number" value="1" class="item-quantidade">
-                <button class="item-remover">Remover</button>
-            </div>
-            <div class="carrinho-valores">
-                <p class="subtotal">Subtotal:</p>
-                <p class="desconto">Desconto:</p>
-                <p class="total">Total:</p>
-            </div>
-            <button class="finalizar">Finalizar Compra</button>
-        </aside>
         <div class="carrinho-icon"></div>
         <div class="products">
             <div class="carousel">
@@ -56,6 +33,24 @@
                 <button onclick="rightbtn()" class="btnright">></button>
             </div>
         </div>
+        <aside class="carrinho">
+            <h1 class="carrinho-title">Carrinho de Compras</h2>
+            <div class="carrinho-produtos">
+                <!-- <div class="carrinho-itens">
+                    <img src="./img/cappurple.jpg" alt="" class="item-imagem">
+                    <p class="item-nome">Item</p>
+                    <p class="item-valor">R$ 20,30</p>
+                    <input type="number" value="1" class="item-quantidade">
+                    <button class="item-remover">Remover</button>
+                </div> -->
+            </div>
+            <div class="carrinho-valores">
+                <p class="subtotal">Subtotal:</p>
+                <p class="desconto">Desconto:</p>
+                <p class="total">Total =</p>
+            </div>
+            <button class="finalizar">Finalizar Compra</button>
+        </aside>
         <div class="history">
             <div class="history-desc">
                 <h2>Kevin Assunção</h2>
